簡化動畫的 CSS 寫法

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<link rel="stylesheet" href="css/anima.css">
 	<style>
 	@media only screen and (min-width: 300px) {
+		img {
+			width: 100%;
+		}
 		div.contact div{
 			margin-left:0px;
 		}
@@ -45,7 +48,7 @@
 	<div class="header">
 		<div class="in">
 			<div class="wrap">
-				<img src="https://farm8.staticflickr.com/7461/15765399847_fd5322e65b_n.jpg" alt="my_photo" style="height:248px; border:1px solid black;">
+				<img src="https://farm8.staticflickr.com/7461/15765399847_fd5322e65b_n.jpg" alt="my_photo" style=" border:1px solid black;">
 			</div>
 			<div class="wrap">
 				<h1><span class="mhidden">This is </span>Wildsky Fann<span class="shidden">'s Self-Introduction</span></h1>
